# rust-api

./: .gitignore  Cargo.toml  Makefile  env.example
.sqlx/: query-011afcd4b3f199491830900c61721ad2c502a0ef78482cf13565e0f213102f50.json  query-02a6a081b5ff3518ae590f13599685ee6cb3b3b038b7315af3ab1e1eeab8b9d1.json  query-05998bce76dfc6b7ae1dbda5a04925fc068df4c9731fbcebc3152622d38cce83.json  query-26911a713d9f5f208660e17df77cb830c24ecdd72ee1c7509527fea54907fd77.json  query-5e4d931491dec349e3401ddb447bedf4411074c5d9cfa892709ac27344cd5754.json  query-72daaf439c857c823e7e687ec87e1160bab4bb2794627a3d80ff507c914b7247.json  query-73041d1e1e4a0a0cc22c34d25e60fb2954c81e1987f551db339b28497a05497a.json  query-8cf36e9d80aa078d0e8cad564d02f96ee467c982cdf1dccf424093f5e264a3f3.json  query-915ea371a58efc7e03f08c3944064bae344d98c66e0162cad3c26206bfcd21fd.json  query-a0a4a21bdc56ec4a78eeae070a69a0790a0bc9e83fc44571db5fc31f69c2ea58.json  query-b69039d4dc432595e6f35fe2aff4c2d827fa352e973e19157fca5c02b86253d3.json  query-cf18a88c03c7557fcc0f13c282ab13445cf4b0388f77dab15bbc5037d5227251.json  query-da429aaa22b6f795cfdde5fb8c2e94a8d50ff8409ce96f14670bd642e960baa1.json  query-fadf82015e4ef5bbd20e733fb1ea4463041bbb5e8600b1909aba313c858af30b.json
api/: Cargo.toml
api/finance-manager/: Cargo.toml
api/finance-manager/migrations/: 20250918095040_init-finance-manager-schema.sql
api/finance-manager/src/: main.rs
api/finance-manager/src/modules/: payment.rs  routes.rs
api/finance-manager/src/modules/payment/: domain.rs  repository.rs
api/finance-manager/src/modules/payment/domain/: account.rs  debt.rs  payment.rs
api/finance-manager/src/modules/payment/handler/: payment.rs
api/finance-manager/src/modules/payment/repository/: account.rs  payment.rs
api/finance-manager/src/modules/routes/: payment.rs
api/src/: lib.rs  main.rs
api/src/modules/: auth.rs  chat_bot.rs  finance_manager.rs  mod.rs  routes.rs  telegram_bot.rs  worker.rs
api/src/modules/auth/: routes.rs
api/src/modules/auth/domain/: user.rs
api/src/modules/auth/handler/: auth.rs
api/src/modules/auth/repository/: user.rs
api/src/modules/chat_bot/: domain.rs  gateway.rs  handler.rs  routes.rs
api/src/modules/chat_bot/domain/: debt.rs  formatter.rs  income.rs  new_debt.rs  payment.rs  summary.rs  utils.rs
api/src/modules/finance_manager/: domain.rs  handler.rs  repository.rs  routes.rs
api/src/modules/finance_manager/domain/: account.rs  debt.rs  financial_instrument.rs  income.rs  payment.rs  recurrence.rs
api/src/modules/finance_manager/domain/account/: configuration.rs
api/src/modules/finance_manager/domain/debt/: category.rs  generator.rs  installment.rs  invoice.rs  recurrence.rs
api/src/modules/finance_manager/domain/financial_instrument/: configuration.rs
api/src/modules/finance_manager/domain/recurrence/: recurrence_run.rs
api/src/modules/finance_manager/handler/: account.rs  debt.rs  financial_instrument.rs  income.rs  payment.rs  pubsub.rs  recurrence.rs
api/src/modules/finance_manager/handler/debt/: invoice.rs
api/src/modules/finance_manager/repository/: account.rs  debt.rs  financial_instrument.rs  income.rs  payment.rs  recurrence.rs
api/src/modules/finance_manager/repository/debt/: category.rs  installment.rs  invoice.rs
api/src/modules/finance_manager/routes/: account.rs  debt.rs  financial_instrument.rs  income.rs  payment.rs  recurrence.rs
api/src/modules/finance_manager/routes/debt/: invoice.rs
api/src/modules/shared/: repository.rs
api/src/modules/telegram_bot/: gateway.rs  routes.rs
lib/http-error/: Cargo.toml
lib/http-error/src/: axum_integration.rs  error.rs  ext.rs  lib.rs  problem.rs  reqwest_integration.rs  sqlx_integration.rs
migrations/: 20250918095040_init-finance-manager-schema.sql  20251007003754_init-job-schema.sql  20251026212113_recurrences-structure.sql  20251029100457_income-structure.sql  20251031003808_category-structure.sql  20251031010220_alter-table-debt-category.sql  20251031195311_account-configuration.sql  20251214204421_account-id-at-payments-table.sql  20251220124635_debt-installment-tables.sql  20251231110009_category-refactor.sql  20260119000000_auth-users-table.sql  20260119120000_add-client-id.sql  20260120160456_rename-account-to-financial-instrument.sql  20260120162654_update-debt-categories-and-expense-type.sql  20260120185637_client-information-table.sql  20260121105050_add-client-id-foreign-keys.sql  20260129120000_recurrence-account-id-nullable.sql  20260201121503_drop-recurrence-unused-columns.sql  20260407120000_invoice-table.sql  (+4 more)
(+13 files in other folders)
