[workspace]
resolver = "2"
members = ["api/*", "lib/*"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }

# Tools
serde = { version = "1.0.219" }
axum = { version = "0.8.4" }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
] }

# Data Models
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1.15.0", features = ["v4", "serde"] }

## libs
database = { path = "lib/database" }
