[workspace]
resolver = "2"
members = ["api", "lib/*"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }

# Tools
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_plain = { version = "1.0.2" }
axum = { version = "0.8.4" }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
    "tls-rustls",
] }
async-trait = { version = "0.1.87" }
reqwest = { version = "0.12.24", features = ["json"] }

# Data Models
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1.15.0", features = ["v4", "serde"] }

## libs
database = { path = "lib/database" }
http-error = { path = "lib/http-error", features = ["http", "axum", "sqlx"] }
util = { path = "lib/util" }
telegram_api = { path = "lib/telegram_api" }
